force-app/main/default/objects/Factory_Economy__c/fields/Average_Wage__c.field-meta.xml
<CustomField>
    <fullName>Average_Wage__c</fullName>
    <label>Average Wage (£/person)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>4</scale>
    <formula>IF(Employees__c &gt; 0, Wages_Paid__c / Employees__c, 0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>