force-app/main/default/objects/Factory_Economy__c/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <label>Building Type</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>