force-app/main/default/objects/Factory_Economy__c/fields/Capital_Reserves__c.field-meta.xml
<CustomField>
    <fullName>Capital_Reserves__c</fullName>
    <label>Capital Reserves (£)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>