force-app/main/default/objects/Factory_Economy__c/fields/Economy_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Economy_Analysis__c</fullName>
    <label>Economy Analysis</label>
    <type>MasterDetail</type>
    <referenceTo>Economy_Analysis__c</referenceTo>
    <relationshipName>Factory_Economies</relationshipName>
</CustomField>