force-app/main/default/objects/Factory_Economy__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <label>Employees</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>