force-app/main/default/objects/Factory_Economy__c/fields/Factory_GDP__c.field-meta.xml
<CustomField>
    <fullName>Factory_GDP__c</fullName>
    <label>Factory GDP (£)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>