force-app/main/default/objects/Factory_Economy__c/fields/Input_Cost__c.field-meta.xml
<CustomField>
    <fullName>Input_Cost__c</fullName>
    <label>Input Cost (£)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>