force-app/main/default/objects/Factory_Economy__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>