force-app/main/default/objects/Factory_Economy__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>Revenue (£)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>