force-app/main/default/objects/Factory_Economy__c/fields/State_Economy__c.field-meta.xml
<CustomField>
    <fullName>State_Economy__c</fullName>
    <label>State Economy</label>
    <type>Lookup</type>
    <referenceTo>State_Economy__c</referenceTo>
    <relationshipName>Factory_Economies</relationshipName>
    <required>true</required>
    <indexLookup>true</indexLookup>
</CustomField>