force-app/main/default/objects/Factory_Economy__c/fields/Unsold_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Unsold_Quantity__c</fullName>
    <label>Unsold Quantity</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>