force-app/main/default/objects/Factory_Economy__c/fields/Wages_Paid__c.field-meta.xml
<CustomField>
    <fullName>Wages_Paid__c</fullName>
    <label>Wages Paid (£)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>